[Cline] Refactor surface system with proper geodesic handling
- Separate interfaces from implementations
- Add surface type classification (Smooth, Developable, NonSmooth)
- Implement proper transition types (Linear, Circular, Geodesic)
- Fix geodesic computation for different surface types
- Add proper error handling for invalid operations
- Improve documentation and examples

Note: Changes made by Cline AI, not human-reviewed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,45 @@
-cmake_minimum_required(VERSION 3.15)
-project(shap VERSION 0.1.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.12)
+project(shap VERSION 0.1.0)
 
-# Require C++20 for constexpr features and concepts
-set(CMAKE_CXX_STANDARD 20)
+# Set C++ standard
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-add_compile_options(-fconcepts)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add the include directory
-include_directories(include)
+# Add include directory
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
-# Add the example executable
+# Create library target with implementation files
+add_library(shap 
+    src/surface.cpp
+    src/path.cpp
+    src/metric.cpp
+)
+target_include_directories(shap PUBLIC 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+
+# Build examples
 add_executable(basic_demo examples/basic_demo.cpp)
+target_link_libraries(basic_demo PRIVATE shap)
 
-# Add compile definitions for M_PI if needed
-target_compile_definitions(basic_demo PRIVATE
-    _USE_MATH_DEFINES
+# Install rules
+install(TARGETS shap
+    EXPORT shapTargets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include
+)
+
+install(DIRECTORY include/shap
+    DESTINATION include
+    FILES_MATCHING PATTERN "*.hpp"
+)
+
+install(EXPORT shapTargets
+    FILE shapTargets.cmake
+    NAMESPACE shap::
+    DESTINATION lib/cmake/shap
 )
