# Commit Message Draft
## Files Changed

### Modified Files
- [ ] CMakeLists.txt
- [ ] docs/initial_design.md
- [ ] examples/basic_demo.cpp
- [x] include/shap/metric.hpp (reviewed: major changes to metric tensor implementation)
- [x] include/shap/path.hpp (reviewed: enhanced path system with better type safety and documentation)
- [x] include/shap/surface.hpp (reviewed: major surface system architecture improvements)
- [ ] include/shap/surface_collection.hpp
- [x] src/metric.cpp (reviewed: enhanced Christoffel symbols implementation)
- [x] src/path.cpp (reviewed: major path implementation improvements)
- [x] src/surface.cpp (reviewed: major surface implementation improvements)

### New Files
- [ ] .clinerules
- [ ] docs/coding_conventions.md
- [ ] docs/tasks/coordinate_transformation_improvements.COMPLETED.md
- [ ] docs/test-investigation/* (multiple documentation files)
- [x] include/shap/coord.hpp (reviewed: new coordinate system implementation)
- [ ] include/shap/edge_connection.hpp
- [ ] include/shap/edge_descriptor.hpp
- [ ] include/shap/geometry_point2.hpp
- [ ] include/shap/param_bound.hpp
- [ ] include/shap/param_index.hpp
- [ ] include/shap/surface_type.hpp
- [ ] include/shap/validation_config.hpp
- [ ] include/shap/surfaces/cube.hpp
- [ ] include/shap/surfaces/flat_patch.hpp
- [ ] include/shap/surfaces/sphere_surface.hpp
- [ ] src/surface_collection.cpp
- [ ] tests/* (new test files)

### Deleted Files
- [x] include/shap/point.hpp (reviewed: original coordinate implementation)
- [x] include/shap/surface_point.hpp (reviewed: original surface point implementation)
- [x] include/shap/surfaces/basic_surfaces.hpp (reviewed: original surface implementations)

Note: Many files were lost and automatically regenerated differently during the AI-driven iteration. This commit message reflects a review of key files that illustrate the architectural changes, but not all modified files have been reviewed in detail.

## Changes

### Metric System Overhaul
1. Enhanced Surf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,26 @@
 cmake_minimum_required(VERSION 3.12)
 project(shap VERSION 0.1.0)
 
-# Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
+# Set C++ compiler to GCC 10
+set(CMAKE_CXX_COMPILER g++-10)
+
+# Set C++ standard to C++20
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Enable warnings and treat them as errors
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(
+        -Wall              # Enable all warnings
+        -Wextra            # Enable extra warnings
+        -Werror            # Treat warnings as errors
+        -Wuninitialized    # Warn about uninitialized variables
+        -Wshadow           # Warn about shadowed variables
+        -Wconversion       # Warn about implicit conversions
+        -pedantic          # Strict ISO C++
+    )
+endif()
 
 # Add include directory
 include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -14,15 +30,28 @@ add_library(shap
     src/surface.cpp
     src/path.cpp
     src/metric.cpp
+    src/surface_collection.cpp
 )
 target_include_directories(shap PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
 
-# Build examples
-add_executable(basic_demo examples/basic_demo.cpp)
-target_link_libraries(basic_demo PRIVATE shap)
+# Temporarily disable other tests to focus on space transformations
+# add_executable(path_tests tests/path_tests.cpp)
+# target_link_libraries(path_tests PRIVATE shap)
+
+add_executable(space_transformation_tests tests/space_transformation_tests.cpp)
+target_link_libraries(space_transformation_tests PRIVATE shap)
+
+add_executable(path_length_tests tests/path_length_tests.cpp)
+target_link_libraries(path_length_tests PRIVATE shap)
+
+# Enable testing
+enable_testing()
+# add_test(NAME path_tests COMMAND path_tests)
+add_test(NAME space_transformation_tests COMMAND space_transformation_tests)
+add_test(NAME path_length_tests COMMAND path_length_tests)
 
 # Install rules
 install(TARGETS shap
