refactor: consolidate metric functionality into RiemannianMetric class
- Move metric function pointers into Surface as primary resources
- Create dedicated RiemannianMetric class with constant components
- Replace metric.hpp/cpp with riemannian_metric.hpp/cpp
- Update surface implementations with analytical derivatives
- Maintain mathematical documentation in code comments
- Update build system to reflect new structure
- Verify space transformation tests pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include)
 add_library(shap 
     src/surface.cpp
     src/path.cpp
-    src/metric.cpp
     src/surface_collection.cpp
+    src/riemannian_metric.cpp
 )
 target_include_directories(shap PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
